--- a/validation/src/main/resources/errors.properties
+++ b/validation/src/main/resources/errors.properties
@@ -39,3 +39,8 @@ max= {0} \uAE4C\uC9C0 \uD5C8\uC6A9\uD569\uB2C8\uB2E4.
 # \uCD94\uAC00
 typeMismatch.java.lang.Integer=\uC22B\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 typeMismatch=\uD0C0\uC785 \uC624\uB958\uC785\uB2C8\uB2E4.
+
+#Bean Validation ??
+NotBlank={0} 공백X
+Range={0}, {2} ~ {1} 허용
+Max={0}, 최대 {1}
