--- a/jpashop2/src/main/resources/application.yml
+++ b/jpashop2/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        show_sql: true
+#        show_sql: true
 
 logging:
   level:
-    org.hibernate.sql: debug
+    org.hibernate.SQL: DEBUG
