jpa data 설명까지 완료

--- a/jpashop/src/main/resources/application.yml
+++ b/jpashop/src/main/resources/application.yml
@@ -12,6 +12,13 @@ spring:
       hibernate:
 #        show_sql: true
         format_sql: true
+        default_batch_fetch_size: 100
+#    open-in-view: false
+
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
 
 logging:
   level:
