--- a/querydsl/src/main/resources/application.yml
+++ b/querydsl/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+#        use_sql_comments: true   # jpql 확인 가능 옵션
 #        show_sql: true
 
 logging.level:
