--- a/itemservice-db/src/test/resources/application.properties
+++ b/itemservice-db/src/test/resources/application.properties
@@ -1,1 +1,6 @@
 spring.profiles.active=test
+#spring.datasource.url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+logging.level.org.springframework.jdbc=debug
