--- a/itemservice-db/src/main/resources/application.properties
+++ b/itemservice-db/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.username=sa
 #spring.datasource.password=
 
 logging.level.org.springframework.jdbc=debug
+
+
+# MyBatis
+mybatis.type-aliases-package=hello.itemservice.domain
+mybatis.configuration.map-underscore-to-camel-case=true
+logging.level.hello.itemservice.repository.mybatis=trace
