--- a/springtx/src/main/resources/application.properties
+++ b/springtx/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.springframework.transaction.interceptor=trace
+logging.level.org.springframework.jdbc.datasource.DataSourceTransactionManager=DEBUG
+#JPA log
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.hibernate.resource.transaction=DEBUG
 
+#JPA SQL
+logging.level.org.hibernate.SQL=DEBUG
