spring security api 커스텀 구현

--- a/oauth/src/main/resources/application.yaml
+++ b/oauth/src/main/resources/application.yaml
@@ -13,7 +13,28 @@ spring:
             redirect-uri: http://localhost:8081/login/oauth2/code/keycloak # 필수
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_basic
+            scope: openid,profile
+
+          keycloakWithPKCE:
+            client-id: oauth2-client-app2   # 필수
+            client-secret: R7sT2hZ2fpZpI21FwsdWUuYBJgVj0hdv  # 필수
+            client-name: oauth2-client-app2
+            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak # 필수
+            authorization-grant-type: authorization_code
+            client-authentication-method: client_secret_basic
+            scope: openid,profile
+            clientAuthenticationMethod: none
+
+          keycloak2:
+            client-id: oauth2-client-app3   # 필수
+            client-secret: R7sT2hZ2fpZpI21FwsdWUuYBJgVj0hdv  # 필수
+            client-name: oauth2-client-app3
+            redirect-uri: http://localhost:8081/home # 필수
+            authorization-grant-type: implicit
+            client-authentication-method: none
             scope: openid,profile,email
+
+
         provider:
           keycloak:
             authorization-uri: http://localhost:8080/realms/Oauth2/protocol/openid-connect/auth
