--- a/stock/src/main/resources/application.yaml
+++ b/stock/src/main/resources/application.yaml
@@ -8,6 +8,8 @@ spring:
     url: jdbc:mariadb://localhost:3306/stock_example
     username: root
     password: password
+    hikari:
+      maximum-pool-size: 40
 
 logging:
   level:
