--- a/stock/build.gradle
+++ b/stock/build.gradle
@@ -25,7 +25,8 @@ dependencies {
 	implementation 'org.redisson:redisson-spring-boot-starter:3.21.1'
 
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	runtimeOnly	'mysql:mysql-connector-java:8.0.32'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
