--- a/stock/src/main/resources/application.yaml
+++ b/stock/src/main/resources/application.yaml
@@ -3,19 +3,22 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/stock_example
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3307/stock?serverTimezone=Asia/Seoul
     username: root
     password: password
     hikari:
       maximum-pool-size: 40
 
-logging:
-  level:
-    org.hibernate:
-      SQL: DEBUG
-      type:
-        descriptor:
-          sql:
-            BasicBinder: TRACE
+#logging:
+#  level:
+#    org.hibernate:
+#      SQL: DEBUG
+#      type:
+#        descriptor:
+#          sql:
+#            BasicBinder: TRACE
